--- a/README.org
+++ b/README.org
@@ -26,9 +26,7 @@ Move a .vcf file to 'input' dir
 
 Then run the program
 
-=./run.sh=
-
-=./run.sh NULL= single input interactive mode
+=./run.sh= single input interactive mode
 
 =./run.sh full= single input noninteractive
 
